Verification for Hybrid node pool/Case-7-Allow-egress-to-some-pods-in-same-namespace/Networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: limit-egress-from-pod
  namespace: development
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: frontend
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: backend
